 * Mandatory MAC lookup in the self-registered guests pages
 * Cancel button problems on SMS confirmation page (#1393)
 * Documented the fact that you need to configure credentials in packetfence-soh.pm for Statement of Health (SoH) support
 * Fixed port-security + VoIP support for the HP wired product line
 * Minor Administration Guide updates
 * Fixed CSS for mobiles devices

Translations
 * Updated Brazilian Portuguese (pt_BR) translation (Thanks to Diego de Souza Lopes)

--------------------------------------------------------------------------------
Version 3.2.0 released on 2012-02-22

Security
 * Reflected Cross-site scripting (XSS) in Web Admin printing system (#1362)

New Hardware Support
 * Ruckus Wireless Controllers

New Features
 * OpenVAS Vulnerability Assesment integration for client-side policy compliance
 * Bandwidth violations based on RADIUS accounting information
 * Billing engine integration for allowing the use of a payment gateway to gain network access.

Enhancements
 * Migrated our documentation from a binary-only ODT to a flexible asciidoc format
 * Code and tests refactoring
 * Minor documentation update for Aruba Controllers
 * Performance: avoiding some redundant operations on startup
 * A DHCP listener will run by default on the management interface 
 * pfcmd_vlan is now able to run arbitrary methods on network devices
 * Debug statement with the resolved SSID now available to troubleshoot SSID problems live
 * Added getSwitchLocation to pfcmd_vlan which fetches SNMP sysLocation on switch (#1250, Thanks to Maikel!)
 * Introduced more aggressive exception-based configuration error handling
 * Introduced new trigger types (nessus and openvas) and removed the scan type
 * Added the capability to use dots in trigger id
 * Added a new config flag: registration.guests_self_registration to control if self-registered guests are enabled (#1361)
 * Made it easier to override preregistered guest usernames (default is email)